=== 3.46.0 (2013-04-02)

* Add Dataset#cross_apply and Dataset#outer_apply on Microsoft SQL Server (jeremyevans)

* Speed up threaded connection pools when :connection_handling=>:queue is used (jeremyevans)

* Allow external connection pool classes to be loaded automatically (jeremyevans)

* Add Dataset#with_pk! for model datasets, like #with_pk, but raising instead of returning nil (jeremyevans)

* Add Dataset#first!, like #first, but raising a Sequel::NoMatchingRow exception instead of returning nil (jeremyevans)

* Dataset #select_map, #select_order_map, and #get no longer support a plain string inside an array of arguments (jeremyevans)

* Escape ] characters in identifiers on Microsoft SQL Server (jeremyevans)

* Add security guide (jeremyevans)

* Make validates_type handle false values correctly (jeremyevans) (#636)

* Have associations, composition, serialization, and dirty plugins clear caches in some additional cases (jeremyevans) (#635)

* Add alter_table drop_foreign_key method for dropping foreign keys by column names (raxoft, jeremyevans) (#627)

* Allow creation named column constraints via :*_constraint_name column options (jeremyevans)

* Handle drop_constraint :type=>:primary_key on H2 (jeremyevans)

* Handle infinite dates in the postgres adapter using Database#convert_infinite_timestamps (jeremyevans)

* Make the looser_typecasting extension use looser typecasting for decimal columns as well as integers and floats (jeremyevans)

* Do strict typecasting of decimal columns by default, similar to integer/float typecasting (jeremyevans)

=== 3.45.0 (2013-03-01)

* Remove bad model typecasting of money type on PostgreSQL (jeremyevans) (#624)

* Use simplecov instead of rcov for coverage testing on 1.9+ (jeremyevans)

* Make the Database#quote_identifier method public (jeremyevans)

* Make PostgreSQL metadata parsing handle tables with the same name in multiple schemas (jeremyevans)
